# glib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
dep/glsdk/: README.html  boost_include.lua  glsdk.sln  links.lua  premake4.lua
dep/glsdk/.META/: SITE.txt  SOURCE.txt
dep/glsdk/boost/: Version.txt
dep/glsdk/docs/: glsdk.cfg  glsdk.doxy  glsdk_version.cfg  glsdk_web.cfg  modules.doxy
dep/glsdk/examples/: premake4.lua
dep/glsdk/examples/caustics/: dino.c  underwater.c
dep/glsdk/examples/font_test/: font_test.cpp
dep/glsdk/examples/simple_glfw/: simple_glfw.cpp
dep/glsdk/examples/simple_glut/: simple_glut.cpp
dep/glsdk/freeglut/: freeglut.vcxproj  freeglut.vcxproj.filters
dep/glsdk/freeglut/lib/: freeglutD.lib
dep/glsdk/glfw/: glfw.lua  glfw.vcxproj  glfw.vcxproj.filters
dep/glsdk/glimg/: glimg.lua  glimg.vcxproj  glimg.vcxproj.filters
dep/glsdk/glimg/Debug/: vc120.idb
dep/glsdk/glimg/Debug/glimg.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  glimg.lastbuildstate  lib.command.1.tlog
dep/glsdk/glimg/lib/: glimgD.lib
dep/glsdk/glload/: glload.vcxproj  glload.vcxproj.filters
dep/glsdk/glload/Debug/: vc120.idb
dep/glsdk/glload/Debug/glload.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
dep/glsdk/glload/lib/: glloadD.lib
dep/glsdk/glloadgen/modules/: GetOptions.lua  Structure.lua
dep/glsdk/glmesh/: glmesh.lua  glmesh.vcxproj  glmesh.vcxproj.filters
dep/glsdk/glmesh/Debug/: vc120.idb
dep/glsdk/glmesh/Debug/glmesh.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
dep/glsdk/glmesh/source/: GenMeshMisc.cpp  GenPlatonic.cpp  GenQuadrics.cpp  VertexFormat.cpp
dep/glsdk/glutil/: glutil.lua  glutil.vcxproj  glutil.vcxproj.filters
dep/glsdk/glutil/Debug/: vc120.idb
dep/glsdk/glutil/lib/: glutilD.lib
dep/glsdk/glutil/source/: Font.cpp  Shader.cpp
docs/: Home.md  TODO.md  _Footer.md  _Sidebar.md  index.html  params.json
include/: glib.h
include/glib/: glib.h
src/: CMakeLists.txt  GlibErrors.h  GlibWindow.cpp  GlibWindow.h  GlibWindowEventHandler.h
src/BuildConfig/: BuildConfig.h  BuildConfig.in.h
src/GLIB/: GLIB.sdf  GLIB.sln  GLIB.vcxproj  GLIB.vcxproj.filters  main.cpp  window.h
src/GLIB/Debug/: GLIB.ilk  vc120.idb
src/GLIB/Debug/GLIB.tlog/: CL.read.1.tlog  CL.write.1.tlog  GLIB.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/GlibWindow/: GlibWindow.cpp  GlibWindow.h
src/glib/: glib.h
src/glib/GlibWindow/: GlibWindow.cpp  GlibWindow.h
src/include/: GlibApplication.h  GlibErrors.h  GlibWindow.h  GlibWindowEventHandler.h  glib.h
src/source/: GlibApplication.cpp  GlibWindow.cpp
tools/cmake/.META/: SITE.txt  SOURCE.txt
tools/cmake/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
tools/cmake/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-developer.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-properties.7  cmake-qt.7  cmake-toolchains.7  cmake-variables.7
tools/premake/.META/: SITE.txt  SOURCE.txt
(+945 files in other folders)
